GMS-72 Fix of some failed tests